--- a/index.html
+++ b/index.html
@@ -11,30 +11,30 @@
 </head>
 <body>
 
-	<header>
-		<div id="main-header" class="card text-center mx-auto main-content my-5"> Restaurant Trivia </div>
-	</header>
+	<section class="card text-center main-content mx-auto my-5">
+	
+		<h1 id="main-header" class="card text-center mx-auto main-content my-4"> Restaurant Trivia </h1>
+	
+		<div id="title-container" class="card inner-content mx-auto m-3">
+			<h2 id="title-box">Click Here to Begin</h2>
+		</div> 
 
-	<section class="card text-center main-content mx-auto my">
-		<div class="card inner-content mx-auto m-3">
-			<div id="title-box">title box</div>
+		<div id="time-container" class="card inner-content mx-auto m-3">
+			<div id="time-box"></div>
 		</div>
 
-		<div class="card inner-content mx-auto m-3">
-			<div id="time-box">time box</div>
-		</div>
-
-		<div class="card inner-content mx-auto m-3">
+		<div id="answer-container" class="card inner-content mx-auto m-3">
 			<div id="answer-box">
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">Cras justo odio</li>
-					<li class="list-group-item">Dapibus ac facilisis in</li>
-				    <li class="list-group-item">Vestibulum at eros</li>
+				<ul class="list-group list-group-flush"> 
+					<li id="choice1" class="possible-answer list-group-item list-group-item-action"></li>
+					<li id="choice2" class="possible-answer list-group-item list-group-item-action"></li>
+					<li id="choice3" class="possible-answer list-group-item list-group-item-action"></li>
+					<li id="choice4" class="possible-answer list-group-item list-group-item-action"></li>
 				</ul>
-
-
 			</div> <!-- end answer box -->
 		</div>
+
+
 	</section>
 
 	
