--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1 id="main-header" class="card text-center mx-auto main-content my-4"> Restaurant Trivia </h1>
 	
 		<div id="title-container" class="card inner-content mx-auto m-3">
-			<h2 id="title-box">Click Here to Begin</h2>
+			<h2 id="start-button">Click Here to Begin</h2>
 		</div> 
 
 		<div id="time-container" class="card inner-content mx-auto m-3">
@@ -24,14 +24,12 @@
 		</div>
 
 		<div id="answer-container" class="card inner-content mx-auto m-3">
-			<div id="answer-box">
-				<ul class="list-group list-group-flush"> 
-					<li id="choice1" class="possible-answer list-group-item list-group-item-action"></li>
-					<li id="choice2" class="possible-answer list-group-item list-group-item-action"></li>
-					<li id="choice3" class="possible-answer list-group-item list-group-item-action"></li>
-					<li id="choice4" class="possible-answer list-group-item list-group-item-action"></li>
-				</ul>
-			</div> <!-- end answer box -->
+			<ul id="answer-box" class="list-group list-group-flush"> 
+				<!-- <li id="choice1" class="possible-answer list-group-item"></li>
+				<li id="choice2" class="possible-answer list-group-item"></li>
+				<li id="choice3" class="possible-answer list-group-item"></li>
+				<li id="choice4" class="possible-answer list-group-item"></li> -->
+			</ul><!-- end answer box -->
 		</div>
 
 
