--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 			<h2 id="start-button">Click Here to Begin</h2>
 		</div> 
 
-		<div id="time-container" class="card inner-content mx-auto m-3">
-			<div id="time-box"></div>
+		<div id="time-container" class="card inner-content mx-auto">
+			<h5 id="time-box"></h5>
 		</div>
 
 		<div id="answer-container" class="card inner-content mx-auto m-3">
