09282017 1013am finished base functionality

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	
 		<h1 id="main-header" class="card text-center mx-auto main-content my-4"> Restaurant Trivia </h1>
 	
-		<div id="title-container" class="card inner-content mx-auto m-3">
-			<h2 id="start-button">Click Here to Begin</h2>
+		<div id="title-container" class="card mx-auto m-3">
+			
 		</div> 
 
 		<div id="time-container" class="card inner-content mx-auto">
@@ -25,11 +25,7 @@
 
 		<div id="answer-container" class="card inner-content mx-auto m-3">
 			<ul id="answer-box" class="list-group list-group-flush"> 
-				<!-- <li id="choice1" class="possible-answer list-group-item"></li>
-				<li id="choice2" class="possible-answer list-group-item"></li>
-				<li id="choice3" class="possible-answer list-group-item"></li>
-				<li id="choice4" class="possible-answer list-group-item"></li> -->
-			</ul><!-- end answer box -->
+			</ul>
 		</div>
 
 
