start button working

--- a/index.html
+++ b/index.html
@@ -12,22 +12,29 @@
 <body>
 
 	<section class="card text-center main-content mx-auto my-5">
-	
-		<h1 id="main-header" class="card text-center mx-auto main-content my-4"> Restaurant Trivia </h1>
-	
-		<div id="title-container" class="card mx-auto m-3">
-			
-		</div> 
+		
+		<div class="row"> <!-- Start R1 -->
+			<div class="col-12">
+				<h1 id="main-header" class="card text-center mx-auto main-content my-4"> Restaurant Trivia </h1>
+			</div>
 
-		<div id="time-container" class="card inner-content mx-auto">
-			<h5 id="time-box"></h5>
-		</div>
+			<div class="col-12">
+				<div id="title-container" class="card mx-auto m-3"></div> 
+			</div>
 
-		<div id="answer-container" class="card inner-content mx-auto m-3">
-			<ul id="answer-box" class="list-group list-group-flush"> 
-			</ul>
-		</div>
+			<div class="col-12">
+				<div id="time-container" class="card inner-content mx-auto">
+					<h5 id="time-box"></h5>
+				</div>
+			</div>
 
+			<div class="col-12">
+				<div id="answer-container" class="card inner-content mx-auto m-3">
+					<ul id="answer-box" class="list-group list-group-flush"> 
+					</ul>
+				</div>
+			</div>
+		</div> <!-- End R1 -->
 
 	</section>
 
