changed obj generation approach

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 		
 		<div class="row"> <!-- Start R1 -->
 			<div class="col-12">
-				<h1 id="main-header" class="card text-center mx-auto main-content my-4"> Restaurant Trivia </h1>
+				<h1 id="main-header" class="card text-center mx-auto main-content my-4 no-border"> Restaurant Trivia </h1>
 			</div>
 
 			<div class="col-12">
-				<div id="title-container" class="card mx-auto m-3"></div> 
+				<h2 id="title-container" class="card mx-auto m-3 inner-content no-border"></h2> 
 			</div>
 
 			<div class="col-12">
-				<div id="time-container" class="card inner-content mx-auto">
+				<div id="time-container" class="card inner-content mx-auto no-border">
 					<h5 id="time-box"></h5>
 				</div>
 			</div>
