--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		
 		<div class="row"> <!-- Start R1 -->
 			<div class="col-12">
-				<h1 id="main-header" class="card text-center mx-auto main-content my-4 no-border"> Restaurant Trivia </h1>
+				<h1 id="main-header" class="card text-center mx-auto inner-content my-4 no-border"> Restaurant Trivia </h1>
 			</div>
 
 			<div class="col-12">
